--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ a.list-group-item.active,[class*='-info'] {
 
 #section4 {
 	background-color: #e5e5ef;
-    color:#dedeff;
+    color:#686868;
 }
 
 #section5,#section7,#section7 a {
