--- a/css/styles.css
+++ b/css/styles.css
@@ -102,3 +102,16 @@ footer .nav>li>a:hover {
     background-color:transparent;
 	color:#fff;
 }
+
+/* centered columns styles */
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
+}
