--- a/css/styles.css
+++ b/css/styles.css
@@ -115,3 +115,10 @@ footer .nav>li>a:hover {
     /* inline-block space fix */
     margin:10px;
 }
+.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
