--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,10 @@ h2, .h2 {
   }
 }
 
+h2 a{
+  text-decoration: none;
+}
+
 h3, .h3 {
   font-size: calc(1.3rem + 0.6vw);
 }
@@ -11438,8 +11442,8 @@ html {
 }
 
 .masthead {
-  padding-top: calc(6rem + 74px);
-  padding-bottom: 6rem;
+  padding-top: calc(5rem + 74px);
+  padding-bottom: 4rem;
 }
 .masthead .masthead-heading {
   font-size: 2.75rem;
@@ -11454,8 +11458,8 @@ html {
 
 @media (min-width: 992px) {
   .masthead {
-    padding-top: calc(6rem + 104px);
-    padding-bottom: 6rem;
+    padding-top: calc(3rem + 104px);
+    padding-bottom: 3rem;
   }
   .masthead .masthead-heading {
     font-size: 4rem;
