reorganize app in sub-components

--- a/src/app/modals/union-pacific-modal/union-pacific-modal.component.html
+++ b/src/app/modals/union-pacific-modal/union-pacific-modal.component.html
@@ -2,22 +2,22 @@
 <div class="modal-body pb-5">
     <div class="container">
         <div class="justify-content-center">
-                <!-- Portfolio Modal - Title-->
+                <!-- Title-->
                 <h2 class="portfolio-modal-title text-secondary text-center text-uppercase mb-0"><a href="https://www.up.com" target="_blank">Union Pacific Railroad</a></h2>
+                <h5 class="text-secondary text-center text-uppercase mb-0">Omaha, NE</h5>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><fa-icon [icon]="faTrain"></fa-icon></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <!-- Portfolio Modal - Image-->
-                <!-- <img class="img-fluid mw-25 rounded mb-5" src="assets/img/portfolio/up.png" alt="..." /> -->
-                <!-- Portfolio Modal - Text-->
+                <!-- Experience Modal - Body-->
                 <div class="row text-left">
                     <div class="col-lg-6">
-                        <div class="ms-3">
-                            <h6 class="text-uppercase text-secondary">Software Development Summer Internships</h6>
-                            <h6 class="text-uppercase text-secondary"><span class="badge bg-secondary">Summer 2016</span> & <span class="badge bg-secondary">Summer 2017</span></h6>
+                        <div class="ms-3 mb-1">
+                            <h6 class="text-uppercase text-secondary mb-0">Software Development Summer Internships</h6>
+                            <h6 class="text-uppercase text-secondary mb-0"><span class="badge bg-secondary">Summer 2016</span> & <span class="badge bg-secondary">Summer 2017</span></h6>
+                            <!-- <span class="text-muted font-italic mb-0">Python, Java, TwinCAT PLCs</span> -->
                         </div>
                         <ul class="mb-4">
                             <li>Developed a machine learning model using <a href="https://scikit-learn.org/stable/" target="_blank">sci-kit</a> to predict & control car speeds in hump yards</li>
