reorganize, rename components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <!-- Experience Section-->
 <app-experience></app-experience>
 <!-- Skills Section-->
-<app-skills-section></app-skills-section>
+<app-skills></app-skills>
 <!-- Contact Section-->
 <app-contact></app-contact>
 <!-- Footer-->
