componentize experience modal sections

--- a/src/app/layout/copyright/copyright.component.html
+++ b/src/app/layout/copyright/copyright.component.html
@@ -6,7 +6,7 @@
       <a
         href="https://github.com/jakebeinart/jakebeinart.github.io"
         target="_blank"
-        >Angular source code here</a
+        >source</a
       >.</small
     >
   </div>
