--- a/src/app/sections/experience/experience.component.html
+++ b/src/app/sections/experience/experience.component.html
@@ -18,7 +18,7 @@
     <div class="row justify-content-center">
       <!-- Portfolio Item 1-->
       <div class="col-md-6 col-lg-4 mb-5">
-        <div class="portfolio-item mx-auto">
+        <div class="portfolio-item mx-auto" (click)="openATTModal()">
           <div
             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
           >
@@ -26,7 +26,11 @@
               <fa-icon [icon]="faPlus"></fa-icon>
             </div>
           </div>
-          <img class="img-fluid" src="assets/img/portfolio/att.png" alt="..." />
+          <img
+            class="img-fluid"
+            src="assets/img/portfolio/att.png"
+            alt="AT&T"
+          />
         </div>
       </div>
       <!-- Portfolio Item 2-->
