Add about component and add some copy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <app-nav-bar></app-nav-bar>
 <!-- Masthead-->
 <app-masthead></app-masthead>
-<!-- Experience Section-->
-<app-experience></app-experience>
+<!-- About Section-->
+<app-about></app-about>
 <!-- Skills Section-->
 <app-skills></app-skills>
-<!-- Contact Section-->
-<app-contact></app-contact>
+<!-- Experience Section-->
+<app-experience></app-experience>
 <!-- Footer-->
 <app-footer></app-footer>
 <!-- Copyright Section-->
