--- a/src/app/modals/att-modal/att-modal.component.html
+++ b/src/app/modals/att-modal/att-modal.component.html
@@ -44,6 +44,7 @@
                 Spearheaded organization-wide campaign to create a common
                 Angular component library using company brand standards
               </li>
+              <li class="mb-1">Reviewed code & mentored other developer on</li>
             </ul>
           </app-experience-section>
           <app-experience-section
