--- a/src/app/sections/experience/experience.component.html
+++ b/src/app/sections/experience/experience.component.html
@@ -21,11 +21,7 @@
         <div class="portfolio-item mx-auto" (click)="openATTModal()">
           <div
             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
-          >
-            <div class="portfolio-item-caption-content text-center text-white">
-              <fa-icon [icon]="faPlus"></fa-icon>
-            </div>
-          </div>
+          ></div>
           <img
             class="img-fluid"
             src="assets/img/portfolio/att.png"
@@ -38,11 +34,7 @@
         <div class="portfolio-item mx-auto" (click)="openUPModal()">
           <div
             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
-          >
-            <div class="portfolio-item-caption-content text-center text-white">
-              <fa-icon [icon]="faPlus"></fa-icon>
-            </div>
-          </div>
+          ></div>
           <img class="img-fluid" src="assets/img/portfolio/up.png" alt="..." />
         </div>
       </div>
@@ -55,11 +47,7 @@
         >
           <div
             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
-          >
-            <div class="portfolio-item-caption-content text-center text-white">
-              <fa-icon [icon]="faPlus"></fa-icon>
-            </div>
-          </div>
+          ></div>
           <img
             class="img-fluid"
             src="assets/img/portfolio/podium.png"
@@ -72,11 +60,8 @@
         <div class="portfolio-item mx-auto">
           <div
             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
-          >
-            <div class="portfolio-item-caption-content text-center text-white">
-              <fa-icon [icon]="faPlus"></fa-icon>
-            </div>
-          </div>
+            (click)="openMSTModal()"
+          ></div>
           <img class="img-fluid" src="assets/img/portfolio/st.png" alt="..." />
         </div>
       </div>
@@ -89,11 +74,7 @@
         >
           <div
             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
-          >
-            <div class="portfolio-item-caption-content text-center text-white">
-              <fa-icon [icon]="faPlus"></fa-icon>
-            </div>
-          </div>
+          ></div>
           <img
             class="img-fluid"
             src="assets/img/portfolio/washu.png"
@@ -110,11 +91,7 @@
         >
           <div
             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
-          >
-            <div class="portfolio-item-caption-content text-center text-white">
-              <fa-icon [icon]="faPlus"></fa-icon>
-            </div>
-          </div>
+          ></div>
           <img
             class="img-fluid"
             src="assets/img/portfolio/tudelft.png"
